@@ -17,6 +17,7 @@ see Changelog for full details:
   Juergen Beisert <juergen.beisert@weihenstephan.org>
   Lorenz Moesenlechner <lorenz@hcilab.org>
   Mark Hämmerling <mail@markh.de>
+  Marek Vavruša <marek@vavrusa.com>
   Matthias Kranz <matthias@hcilab.org>
   Matthijs ten Berge <m.h.tenberge@alumnus.utwente.nl>
   Max <max@koeln.ccc.de>
